# Noisebot-v2

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md
firmware/components/autonomic/circadian_core/: CMakeLists.txt  README.md  circadian_core.c  circadian_core.h
firmware/components/autonomic/circadian_core/host_test/: test_circadian_core.c
firmware/components/autonomic/circadian_core/shell/: nb_circadian_core_shell.c  nb_circadian_core_shell.h
firmware/components/autonomic/idle_engine/: CMakeLists.txt  README.md  idle_engine.c  idle_engine.h  nb_attention.c  nb_attention.h  nb_breath.c  nb_breath.h  nb_energy.c  nb_energy.h  nb_posture.c  nb_posture.h
firmware/components/autonomic/idle_engine/host_test/: test_idle_engine.c  test_nb_attention.c  test_nb_breath.c  test_nb_energy.c  test_nb_posture.c
firmware/components/autonomic/reflex_engine/: CMakeLists.txt  README.md  reflex_engine.c  reflex_engine.h
firmware/components/autonomic/reflex_engine/host_test/: test_reflex_engine.c
firmware/components/autonomic/reflex_engine/shell/: nb_reflex_engine_shell.c  nb_reflex_engine_shell.h
firmware/components/autonomic/schedule_core/: CMakeLists.txt  README.md  schedule_core.c  schedule_core.h
firmware/components/autonomic/schedule_core/host_test/: test_schedule_core.c
firmware/components/autonomic/schedule_core/shell/: nb_schedule_core_shell.c  nb_schedule_core_shell.h
firmware/components/hal/audio_hal/: CMakeLists.txt  README.md  audio_hal.c  audio_hal.h
firmware/components/hal/audio_hal/host_test/: test_audio_hal.c
firmware/components/hal/audio_hal/shell/: nb_audio_hal_shell.c  nb_audio_hal_shell.h
firmware/components/hal/display_hal/: CMakeLists.txt  README.md  display_hal.c  display_hal.h
firmware/components/hal/display_hal/host_test/: test_display_hal.c
firmware/components/hal/display_hal/shell/: nb_display_hal_shell.c  nb_display_hal_shell.h
firmware/components/hal/led_hal/: CMakeLists.txt  README.md  idf_component.yml
firmware/components/hal/led_hal/shell/: nb_led_hal_shell.c  nb_led_hal_shell.h
firmware/components/hal/touch_hal/: CMakeLists.txt  README.md  touch_hal.c  touch_hal.h
firmware/components/hal/touch_hal/host_test/: test_touch_hal.c
firmware/components/hal/touch_hal/shell/: nb_touch_hal_shell.c  nb_touch_hal_shell.h
firmware/components/infra/app_config/: CMakeLists.txt  README.md  app_config.c  app_config.h
firmware/components/infra/app_config/host_test/: test_app_config.c
firmware/components/infra/app_config/shell/: nb_app_config_shell.c  nb_app_config_shell.h
firmware/components/infra/boot_manager/: CMakeLists.txt  README.md  boot_manager.c  boot_manager.h
firmware/components/infra/boot_manager/host_test/: test_boot_manager.c
firmware/components/infra/boot_manager/shell/: nb_boot_manager_shell.c  nb_boot_manager_shell.h
firmware/components/infra/event_bus/: CMakeLists.txt  README.md  event_bus.c  event_bus.h
firmware/components/infra/event_bus/host_test/: test_event_bus.c
firmware/components/infra/event_bus/shell/: nb_event_bus_shell.c  nb_event_bus_shell.h
firmware/components/infra/logger/: CMakeLists.txt  README.md  logger.c  logger.h
firmware/components/infra/logger/host_test/: test_logger.c
firmware/components/infra/logger/shell/: README.md  nb_logger_shell.c  nb_logger_shell.h
firmware/components/infra/nbp2/: CMakeLists.txt  README.md
firmware/components/infra/ota/: CMakeLists.txt  README.md  ota.c  ota.h
firmware/components/infra/ota/host_test/: test_ota.c
firmware/components/infra/ota/shell/: nb_ota_shell.c  nb_ota_shell.h
firmware/components/infra/watchdog/: CMakeLists.txt  README.md  watchdog.c  watchdog.h
firmware/components/infra/watchdog/host_test/: test_watchdog.c
firmware/components/infra/watchdog/shell/: nb_watchdog_shell.c  nb_watchdog_shell.h
firmware/components/infra/wifi_setup/: CMakeLists.txt  README.md  wifi_setup.c  wifi_setup.h
firmware/components/infra/wifi_setup/host_test/: test_wifi_setup.c
firmware/components/infra/wifi_setup/shell/: nb_wifi_setup_shell.c  nb_wifi_setup_shell.h
firmware/components/services/audio_playback_service/: CMakeLists.txt  README.md  audio_playback_service.c  audio_playback_service.h
firmware/components/services/audio_playback_service/host_test/: test_audio_playback_service.c
firmware/components/services/audio_playback_service/shell/: nb_audio_playback_service_shell.c  nb_audio_playback_service_shell.h
firmware/components/services/face/renderer/: CMakeLists.txt  README.md  renderer.c  renderer.h
firmware/components/services/led_service/: CMakeLists.txt  README.md  led_service.c  led_service.h
firmware/components/services/led_service/host_test/: test_led_service.c
firmware/components/services/led_service/shell/: nb_led_service_shell.c  nb_led_service_shell.h
firmware/components/services/mind_link/: CMakeLists.txt  README.md  mind_link.c  mind_link.h
firmware/components/services/mind_link/host_test/: test_mind_link.c
firmware/components/services/touch_service/: CMakeLists.txt  README.md  touch_service.c  touch_service.h
firmware/components/services/wake_service/: CMakeLists.txt  README.md  wake_service.c  wake_service.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
server/: pyproject.toml
server/noisebot2/: __init__.py  bus.py  config.py  provider_smoke.py  runtime.py
server/noisebot2/mind/: __init__.py  contracts.py  local_intents.py  mind_output.py  turn_engine.py
server/noisebot2/providers/: __init__.py  circuit_breaker.py  factory.py  llm.py  stt.py  tts.py
server/noisebot2/stores/: __init__.py  conversation_store.py
server/noisebot2/transport/: __init__.py  nbp2_server.py
server/tests/: test_conversation_store.py  test_llm_config_and_factory.py  test_llm_provider_http.py  test_local_intents.py  test_mind_output.py  test_nbp2_fake_server.py  test_nbp2_transport.py  test_provider_circuit_breaker.py  test_provider_smoke.py  test_providers_runtime.py  test_runtime_from_env.py  test_runtime_shutdown.py  test_smoke.py  test_tts_provider.py  test_turn_engine.py
(+90 files in other folders)
