[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noisebot2-server"
version = "0.1.0"
description = "NoiseBot 2 — a mente: STT, LLM, TTS, visão, persona, memória"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Providers entram por fase (S4/S5): faster-whisper, piper-tts, opencv-python…
# Mantidos fora do core para o esqueleto instalar rápido no CI.

[tool.setuptools.packages.find]
include = ["noisebot2*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
